[package]
name = "restic"
version = "0.1.0"
edition = "2024"
description = "Wrapper for restic"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"

[dependencies]
# Async
tokio = { version = ">=1.23.1", features = ["process"] }

# Data
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }

# Error handling
thiserror = { version = "~2" }

# Tracing
tracing = { version = "~0.1" }
